clarify arxiv section

--- a/manuscript.tex
+++ b/manuscript.tex
@@ -212,7 +212,7 @@ One possible explanation might be that women are less likely to publish in high-
 
 We also examined whether computational biology or biology articles tend to have higher impact factors. Bootstrap analysis of authors in each dataset suggest that computational biology publications tend to be published in journals with a higher impact factor ($\bar{IF} = 7.25 \pm 0.04$) than publications in biology as a whole ($\bar{IF} = 6.5 \pm 0.02$). However, given the magnitude of the correlation between IF and $P_{female}$, this difference is unlikely to explain the differences in $P_{female}$ observed between our computational biology and biology datasets. Taken together, these data suggest that the authors of computational biology papers are less likely to be women than the authors of biology papers generally.
 
-We turned next to an investigation of computational biology relative to computer science. Since Pubmed does not index computer science publications, we cannot compare the computational biology dataset to computer science research papers directly. Instead, we investigated the gender balance of authors of manuscripts submitted to arXiv, a preprint repository for academic papers used frequently by quantitative fields like mathematics and physics. These preprint records cannot be compared to peer-reviewed publications indexed on pubmed, but a “quantitative biology” section was added to arXiv in 2003. There are relatively few papers preprints prior to 2007, so we compared preprints in “quantitative biology” to those in “computer science” from 2007-2016.
+We turned next to an investigation of biological fields relative to computer science. Since Pubmed does not index computer science publications, we cannot compare the computational biology dataset to computer science research papers directly. Instead, we investigated the gender balance of authors of manuscripts submitted to arXiv, a preprint repository for academic papers used frequently by quantitative fields like mathematics and physics. These preprint records cannot be compared to peer-reviewed publications indexed on pubmed, but a “quantitative biology” (qb) section was added to arXiv in 2003. Quantitative biology is not necessarily equivalent to computational biology, and analysis of arXiv-qb papers that have been published and indexed on pubmed suggests that only a fraction of them are labeled with the "computational biology" MeSH term. However, this does allow us to make an apples-to-apples comparision between a field of biology and computer science. There are relatively few papers preprints prior to 2007, so we compared preprints in “quantitative biology” to those in “computer science” from 2007-2016.
 
 Women were more likely to be authors in quantitative biology manuscripts than in computer science manuscripts in first, second, and middle author positions (Figure 3A, Table 3). We found no significant difference in the frequency of female authors in the last or penultimate author positions in these two datasets, though the conventions for determining author order are not necessarily the same in computer science as in biology. Nevertheless, women had higher representation in quantitative biology than in computer science for all years except 2009 (Figure 3B). Interestingly, there is a slight but significant ($0.0052 / year$, $P_{Z > |z|} < 0.005$) increase in the proportion of female authors over time in quantitative biology, while there’s no significant increase female representation in computer science preprints.
 
